# vs-code-use

./: CMakeLists.txt  a.out  build.sh  hello.c  utils.c
include/: foo.h
src/: foo.c  hello.c
test/: hello_test.cc
